[gd_scene load_steps=7 format=3 uid="uid://dn85x2w8551o8"]

[ext_resource type="Script" path="res://plate.gd" id="1_2ch5s"]
[ext_resource type="Texture2D" uid="uid://bb1poeibdwrv3" path="res://Assets/Food/Plate.png" id="1_8amux"]
[ext_resource type="Texture2D" uid="uid://bhvc2lkfnv1tl" path="res://Assets/Food/steak.png" id="3_oun1w"]
[ext_resource type="Texture2D" uid="uid://1jukbyg3apdg" path="res://Assets/Food/Spaghetti.png" id="4_q725t"]
[ext_resource type="Texture2D" uid="uid://b2vee5f37yhkq" path="res://Assets/Food/salad.png" id="5_mocnb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fyqxo"]
size = Vector2(28, 48)

[node name="Plate" type="Area2D"]
script = ExtResource("1_2ch5s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("1_8amux")

[node name="Food" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Steak" type="Sprite2D" parent="Food"]
visible = false
scale = Vector2(2, 2)
texture = ExtResource("3_oun1w")

[node name="Spaghetti" type="Sprite2D" parent="Food"]
visible = false
position = Vector2(0, -4)
scale = Vector2(2.5, 2.5)
texture = ExtResource("4_q725t")

[node name="Salad" type="Sprite2D" parent="Food"]
visible = false
position = Vector2(0, -6)
scale = Vector2(2.5, 2.5)
texture = ExtResource("5_mocnb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_fyqxo")

[node name="PlateRespawn" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="PlateRespawn" to="." method="_on_plate_respawn_timeout"]
